重构--改字段